[package]
name = "render"
version = "0.1.0"
authors = ["Andrew Thorwall <athorwall@palantir.com>"]

[dependencies]
cgmath = "0.14.1"
winit = "0.16.0"
time = "0.1.37"
log = "0.4.2"
image = "0.19.0"

[dependencies.vulkano]
path = "../vulkano/vulkano"

[dependencies.vulkano-shader-derive]
path = "../vulkano/vulkano-shader-derive"

[dependencies.vulkano-win]
path = "../vulkano/vulkano-win"